# mai-idss-flood

./: .gitignore  Dockerfile.pipeline  README.md  README.txt  data1.ipynb  data2.ipynb  pyrightconfig.json  requirements.txt  run_pipeline_v2.py  summarize_actions.py
Data/: StLouisMeasurements_data_exploration.ipynb  data1India.ipynb  frontend_raw_data.csv
DataBackup/: .gitkeep
Demo/: .gitkeep
Models/: rule_based.py  severity_mapping.py  zone_builder.py  zone_config.py
Presentation/: .gitkeep  PW3-IDSS-2025-T1_Presentation
Programs/: 01_explore.py  01b_weather_features.py  02_downsample_daily.py  03_interpolate_hourly.py  04_create_lags.py.py  05_train_test_split.py  06c_longterm_forecast.py  07_evaluate_test.py  07_train_models.py  07b_train_quantile_models.py  08_global_summary.py  08b_add_conformal_intervals.py  09_visualize_results.py  09b_visualize_uncertainty.py  10_add_flood_probability.py  10_plot_allocations.py  10_visualize_results.py  create_raw_frontend_dataset.py  data_fetcher.py  extract_use_case_raw_data.py  feature_engineer.py  inference_api.py  live_prediction.ipynb  requirements.txt  run_full_experiment.py  run_initialization.py  test_all.py  test_inference_api.py  test_results.json
Source/: .gitkeep
UI/: CLAUDE.md  README.md  (+1 more)
level_prediction/: INSTALL.md  MANIFEST.in  README.md  __init__.py  config.py  data_fetcher.py  feature_engineer.py  predictor.py  pyproject.toml  requirements.txt  setup.py  test_package.py
level_prediction/examples/: __init__.py  example_compare_lead_times.py  example_custom_data.py  example_live_data.py
(+2908 files in other folders)
