[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "level-prediction"
version = "1.0.0"
description = "Self-contained flood level prediction for St. Louis region"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "IDSS Flood Prediction Team"},
]
keywords = ["flood", "prediction", "machine learning", "time series"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.6",
    "tensorflow>=2.15.0",
    "joblib>=1.3.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
